<resources>
    <string name="app_name">Peternak</string>
    <string name="item_label">Items</string>
    <string name="text_name">Yadi Nugraha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_notif">Notifikasi</string>
    <string name="menu_profile">Profile</string>
    <string name="text_note">Ayo Lakukan Inseminasi Pada\nHewan Ternak</string>
    <string name="text_ternak">Ternak</string>
    <string name="text_pengajuan">Pengajuan</string>
    <string name="text_tglternak">yyyy-mm-dd</string>
    <string name="text_kandang">Pilih Kandang</string>
    <string name="text_detailternak">Detail Ternak</string>
    <string name="text_nama">Nama</string>
    <string name="text_namaternak">Nama Ternak</string>
    <string name="text_tgl">Tanggal Lahir</string>
    <string name="text_tanggal">yyyy/mm/dd</string>
    <string name="text_jenis">Jenis</string>
    <string name="text_jenissapi">Jenis Sapi</string>
    <string name="text_bb">Berat Badan</string>
    <string name="text_kg">xxx Kg</string>
    <string name="text_jk">Jenis Kelamin</string>
    <string name="text_kelamin">Jantan</string>
    <string name="text_induk">Id Induk</string>
    <string name="text_xxx">xxxxxxxxxxxx</string>
    <string name="text_tambah">Tambah</string>
    <string name="text_hapus">Hapus</string>
    <string name="text_history">Riwayat Inseminasi</string>
    <string name="text_namaIB">Nama Inseminator</string>
    <string name="text_id_sapi">ID Sapi</string>
    <string name="text_detailriwayat">Detail Riwayat</string>
    <string name="text_idib">Id Inseminasi</string>
    <string name="text_jenissemen">Jenis Semen</string>
    <string name="text_waktuib">Waktu Inseminasi</string>
    <string name="text_infobunting">Infromasi Bunting</string>
    <string name="text_belum">Belum Bunting</string>
    <string name="text_mengajukanib">Mengajukan Inseminasi</string>
    <string name="text_login">Login</string>
    <string name="text_email">E-Mail</string>
    <string name="text_nohp">No Handphone</string>
    <string name="text_pass">Password</string>
    <string name="text_register">Registrasi</string>
    <string name="text_edit">Edit</string>
    <string name="text_date">Tanggal</string>
    <string name="text_time">Jam</string>
    <string name="text_ajukan">Ajukan</string>
    <string name="text_inseminasi">Inseminasi</string>
    <string name="text_regis">No Regis</string>
    <string name="text_Profile">Profile</string>
    <string name="text_pend">Pendidikan</string>
    <string name="text_alamat">Alamat</string>
    <string name="text_nik">Nik</string>
    <string name="text_berternak">Lama Berternak</string>
    <string name="text_prov">Provinsi</string>
    <string name="text_regency">Regency</string>
    <string name="text_village">Village</string>
    <string name="text_lamaberternak">Lama Berternak</string>
    <string name="text_province">Province</string>
    <string name="text_kab">Kabupaten</string>
    <string name="text_kamp">Kampung</string>
    <string name="text_EditProfile">Edit Profile</string>
    <string name="text_save">Simpan</string>
    <string name="text_daerah">Daerah</string>
    <string name="text_desa">Desa</string>
    <string name="text_kec">Kecamatan</string>
    <string name="text_kepemilikan">Kepemilikan</string>
    <string name="text_umur">Umur</string>
    <string name="text_Tambahternak">Tambah Ternak</string>
    <string name="text_noregis">No Regis</string>
    <string name="text_jeniskel">Jenis Kelamin</string>
    <string name="text_upimage">Pilih Gambar</string>
    <string name="text_status">Status Melahirkan</string>
    <string name="text_melahirkan">Melahirkan</string>
    <string name="text_belumlahir">Belum Melahirkan</string>
    <string name="text_logout">Logout</string>
    <string name="text_editternak">Edit Ternak</string>
    <string name="text_jenisternak">Jenis Ternak</string>
    <string name="text_cariinseminator">Cari Inseminator</string>
    <string name="text_waktubirahi">Waktu Birahi</string>
    <string name="text_notifikasi">Notifikasi</string>
    <string name="text_tglib">Tanggal Inseminasi</string>
    <string name="text_tglbirahi">Tanggal Birahi</string>
    <string name="text_MI">Management Insemination</string>
    <string name="text_peternak">Peternak</string>
    <string name="text_book">Buku Peternak</string>
    <string name="text_judul_buku">Judul Buku</string>
    <string name="text_pengajuanib">Pengajuan\nInseminasi</string>
    <string name="text_bookinseminasi">Buku\nPeternakan</string>
    <string name="text_inseminator">Inseminator</string>
    <string name="text_puncak">Puncak birahi</string>
    <string name="text_priodebirahi">Priode Birahi</string>
    <string name="text_tahun">Tahun</string>

    <string-array name="Provinsi">
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Barat</item>
    </string-array>
</resources>