<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ternak.DetailTernakActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ternak1" />

            <TextView
                style="@style/poppins_semibold_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_7sdp"
                android:gravity="center_vertical"
                android:text="@string/text_detailternak"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_detailternak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/cv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_ternak"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/picture_icon"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nama"
                    style="@style/poppins_semibold_style"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_namaternak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_namaternak"
                    style="@style/poppins_regular_style"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_regis"
                    style="@style/poppins_semibold_style"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_xxx"
                    style="@style/poppins_regular_style"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_umur"
                    style="@style/poppins_semibold_style"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_umur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_umur"
                    style="@style/poppins_regular_style"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_jenis"
                    style="@style/poppins_semibold_style"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_jenis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jenissapi"
                    style="@style/poppins_regular_style"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/text_jk"
                    style="@style/poppins_semibold_style"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_jeniskelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_kelamin"
                    style="@style/poppins_regular_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/edit"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="match_parent"
                        style="@style/poppins_regular_style"
                        android:drawableLeft="@drawable/baseline_edit_24"
                        android:text="@string/text_edit"/>
                </LinearLayout>
                <Button
                    android:id="@+id/hapus"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/red"
                    android:drawableLeft="@drawable/baseline_delete_24_white"
                    android:layout_marginStart="@dimen/_10sdp"
                    style="@style/poppins_regular_style"
                    android:text="@string/text_hapus"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>