<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ternak.EditTernakActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ternak1" />

            <TextView
                style="@style/poppins_semibold_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/text_editternak"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/picture_icon"/>

        <Button
            android:id="@+id/up_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_gravity="center"
            android:text="@string/text_upimage"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconDrawable="@drawable/baseline_credit_card_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_ternak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_namaternak" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconDrawable="@drawable/baseline_timelapse_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_umur" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_rumpun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconDrawable="@drawable/baseline_stream_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/et_rumpun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/text_jenisternak"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_rumpun"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:startIconDrawable="@drawable/baseline_transgender_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_jeniskel" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_status" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/lahir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_melahirkan"/>
            <RadioButton
                android:id="@+id/belumlahir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_belumlahir"/>
        </RadioGroup>

        <Button
            android:id="@+id/edit"
            style="@style/poppins_regular_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/text_edit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>